--- a/templates/pages/collaborations.html.twig
+++ b/templates/pages/collaborations.html.twig
@@ -34,21 +34,38 @@
 			</p>
 
 			<div class="row row--mtop">
-				<div class="col-sm-4 collab-col">
-					<h2 class="section-title section-title--small">MimE</h2>
+				<div class="col-sm-6 collab-col">
+					<h2 class="section-title section-title--small">Jérémy Dutheil & Solal Poux</h2>
 
 					<div class="collab-pic-container">
-						<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
+						<img class="img-fluid duos-pic" src="img/jdsp-com.jpg" alt="">
 					</div>
 
 					<p class="collab-txt">
-						Chansons débraillées !
+						Jazz manouche
 					</p>
 
 					<p>
-						<a href="#mime" class="btn btn-primary">En savoir plus</a>
+						<a href="{{ path('jdsp') }}" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
+
+				<div class="col-sm-6 collab-col">
+					<h2 class="section-title section-title--small">Rue la Môme</h2>
+
+					<div class="collab-pic-container">
+						<img class="img-fluid duos-pic" src="img/ruelamome.jpg" alt="">
+					</div>
+
+					<p class="collab-txt">
+						Spectacle hommage à Edith Piaf
+					</p>
+
+					<p>
+						<a href="#ruelamome" class="btn btn-primary">En savoir plus</a>
+					</p>
+				</div>
+
 
 				<div class="col-sm-4 collab-col">
 					<h2 class="section-title section-title--small">Marie Pétrolette</h2>
@@ -67,18 +84,18 @@
 				</div>
 
 				<div class="col-sm-4 collab-col">
-					<h2 class="section-title section-title--small">Rue la Môme</h2>
+					<h2 class="section-title section-title--small">MimE</h2>
 
 					<div class="collab-pic-container">
-						<img class="img-fluid duos-pic" src="img/ruelamome.jpg" alt="">
+						<img class="img-fluid duos-pic" src="img/duos_mime.jpg" alt="">
 					</div>
 
 					<p class="collab-txt">
-						Spectacle hommage à Edith Piaf
+						Chansons débraillées !
 					</p>
 
 					<p>
-						<a href="#ruelamome" class="btn btn-primary">En savoir plus</a>
+						<a href="#mime" class="btn btn-primary">En savoir plus</a>
 					</p>
 				</div>
 
