--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -72,7 +72,15 @@ drift.load('beeybihz4kn4');
 			<div class="row">
                 <div class="col-md-12">
 					<div class="embed-responsive embed-responsive-16by9">
-                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/CXq4DWhwqSU"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/CXq4DWhwqSU?autoplay=1><img src=https://img.youtube.com/vi/CXq4DWhwqSU/sddefault.jpg alt='Vidéo trio jazz manouche - Accordéon / Guitare / Contrebasse'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche - Accordéon / Guitare / Contrebasse"
+						></iframe>
 					</div>
 
                     <p class="text-center" style="margin-top: 15px;">
@@ -175,25 +183,57 @@ drift.load('beeybihz4kn4');
 			<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/W_uOwoGcBuE"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/W_uOwoGcBuE?autoplay=1><img src=https://img.youtube.com/vi/W_uOwoGcBuE/sddefault.jpg alt='Duo jazz manouche - La Foule - accordéon / guitare'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="La Foule - Duo jazz manouche (accordéon / guitare)"
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/CXq4DWhwqSU"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/CXq4DWhwqSU?autoplay=1><img src=https://img.youtube.com/vi/CXq4DWhwqSU/sddefault.jpg alt='Vidéo trio jazz manouche - Accordéon / Guitare / Contrebasse'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche - Accordéon / Guitare / Contrebasse"
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/NIvIUJcluU0"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/NIvIUJcluU0?autoplay=1><img src=https://img.youtube.com/vi/NIvIUJcluU0/sddefault.jpg alt='Vidéo trio jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pmZ80dJklu0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/pmZ80dJklu0"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/pmZ80dJklu0?autoplay=1><img src=https://img.youtube.com/vi/pmZ80dJklu0/sddefault.jpg alt='Vidéo trio jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 			</div>
@@ -229,39 +269,56 @@ drift.load('beeybihz4kn4');
 			<div class="row">
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/W_uOwoGcBuE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/CWUY-repj8g"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/CWUY-repj8g?autoplay=1><img src=https://img.youtube.com/vi/CWUY-repj8g/sddefault.jpg alt='Vidéo duo jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Duo jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CWUY-repj8g" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/u8re-Ba8RQ0"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/u8re-Ba8RQ0?autoplay=1><img src=https://img.youtube.com/vi/u8re-Ba8RQ0/sddefault.jpg alt='Vidéo jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/u8re-Ba8RQ0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/Iklby0R-WyQ"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/Iklby0R-WyQ?autoplay=1><img src=https://img.youtube.com/vi/Iklby0R-WyQ/sddefault.jpg alt='Vidéo jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6" style="margin-bottom: 15px;">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/BGGrRG-q4VU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-				</div>
-
-				<div class="col-md-6" style="margin-bottom: 15px;">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/Iklby0R-WyQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					</div>
-
-
-				</div>
-
-				<div class="col-md-6" style="margin-bottom: 15px;">
-					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/9b6zyj1e2cE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/9b6zyj1e2cE"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/9b6zyj1e2cE?autoplay=1><img src=https://img.youtube.com/vi/9b6zyj1e2cE/sddefault.jpg alt='Vidéo jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 			</div>
@@ -285,7 +342,15 @@ drift.load('beeybihz4kn4');
             <div class="row">
                 <div class="col-md-12">
 					<div class="embed-responsive embed-responsive-16by9">
-                    	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/CXq4DWhwqSU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/CXq4DWhwqSU"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/CXq4DWhwqSU?autoplay=1><img src=https://img.youtube.com/vi/CXq4DWhwqSU/sddefault.jpg alt='Vidéo trio jazz manouche - Accordéon / Guitare / Contrebasse'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche - Accordéon / Guitare / Contrebasse"
+						></iframe>
 					</div>
 
                     <p class="text-center" style="margin-top: 15px;">
@@ -307,13 +372,29 @@ drift.load('beeybihz4kn4');
 			<div class="row">
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NIvIUJcluU0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/NIvIUJcluU0"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/NIvIUJcluU0?autoplay=1><img src=https://img.youtube.com/vi/NIvIUJcluU0/sddefault.jpg alt='Vidéo trio jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 
 				<div class="col-md-6">
 					<div class="embed-responsive embed-responsive-16by9">
-						<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/pmZ80dJklu0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						<iframe
+							class="embed-responsive-item"
+							src="https://www.youtube.com/embed/pmZ80dJklu0"
+							srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/pmZ80dJklu0?autoplay=1><img src=https://img.youtube.com/vi/pmZ80dJklu0/sddefault.jpg alt='Vidéo trio jazz manouche avec accordéon'><span>▶</span></a>"
+							frameborder="0"
+							allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							allowfullscreen
+							title="Trio jazz manouche avec accordéon"
+						></iframe>
 					</div>
 				</div>
 			</div>
