--- a/templates/pages/agenda.html.twig
+++ b/templates/pages/agenda.html.twig
@@ -32,7 +32,7 @@
 			</h1>
 
             <p>
-                Retrouvez ci-dessous les prochaines dates de concert avec Jérémy Dutheil.
+                Retrouvez ci-dessous les prochaines dates de concert avec Jérémy Dutheil et ses différents projets (Jérémy Dutheil & Solal Poux - Jazz manouche, Rue la Môme, Marie Pétrolette ou solo). Pour suivre l'actualité et les dernières nouvelles, rendez-vous sur <a href="https://www.facebook.com/jeremydutheilaccordeoniste" target="_blank">la page Facebook Jérémy Dutheil</a>.
             </p>
 
             <script charset="utf-8" src="https://widget.bandsintown.com/main.min.js"></script><a class="bit-widget-initializer" data-artist-name="Jérémy Dutheil" data-display-local-dates="false" data-language="fr" data-display-past-dates="true" data-auto-style="false" data-text-color="#000000" data-link-color="#ff841c" data-background-color="rgba(0,0,0,0)" data-display-limit="15" data-display-start-time="false" data-link-text-color="#2D2D2D" data-display-lineup="false" data-display-play-my-city="false" data-separator-color="rgba(124,124,124,0.25)"></a>
