--- a/templates/pages/manouche.html.twig
+++ b/templates/pages/manouche.html.twig
@@ -12,7 +12,7 @@
 	{{ parent() }}
 
 	<!-- Start of Async Drift Code -->
-<script>
+<script async>
 "use strict";
 
 !function() {
@@ -144,7 +144,7 @@ drift.load('beeybihz4kn4');
 					</p>
 				</div>
 
-				<div class="col-md-6">
+				<div class="col-md-6" style="text-align: center;">
 					<img class="img-fluid" src="img/crillon.jpg" alt="Trio jazz manouche à l'Hôtel Le Crillon">
 				</div>
 			</div>
@@ -153,7 +153,7 @@ drift.load('beeybihz4kn4');
 
 			<div class="row">
 				<div class="col-md-6">
-					<img class="img-fluid" src="img/swingcocktail2.png" alt="Trio jazz avec chanteur pour vos événements">
+					<img class="img-fluid" src="img/swingcocktail2.jpg" alt="Trio jazz avec chanteur pour vos événements">
 				</div>
 
 				<div class="col-md-6">
