lazy load aint misbehavin

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -189,7 +189,15 @@
 						</p>
 
 						<div class="embed-responsive embed-responsive-16by9 home-video">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/mv3DgoYPCds" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe
+								class="embed-responsive-item"
+								src="https://www.youtube.com/embed/mv3DgoYPCds"
+								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/mv3DgoYPCds?autoplay=1><img src=https://img.youtube.com/vi/mv3DgoYPCds/sddefault.jpg alt='Vidéo accordéon jazz - Aint Misbehavin'><span>▶</span></a>"
+								frameborder="0"
+								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+								allowfullscreen
+								title="Ain't Misbehavin - Accordéon jazz"
+							></iframe>
 						</div>
 					</div>
 				</div>
