webpm youtube thumbnails

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -10,7 +10,7 @@
 							<iframe
 								class="embed-responsive-item"
 								src="https://www.youtube.com/embed/-h2oJAjzAtg"
-								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-h2oJAjzAtg?autoplay=1><img src=https://img.youtube.com/vi/-h2oJAjzAtg/sddefault.jpg alt='Vidéo accordéon jazz - Sunny Side of the Street'><span>▶</span></a>"
+								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/-h2oJAjzAtg?autoplay=1><picture><source type='image/webp' srcset='https://img.youtube.com/vi_webp/-h2oJAjzAtg/sddefault.webp'><source type='image/jpeg' srcset='https://img.youtube.com/vi/-h2oJAjzAtg/sddefault.jpg'><img src='https://img.youtube.com/vi/-h2oJAjzAtg/sddefault.jpg' alt='Vidéo accordéon jazz - Sunny Side of the Street'></picture><span>▶</span></a>"
 								frameborder="0"
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen
@@ -24,7 +24,8 @@
 							<iframe
 								class="embed-responsive-item"
 								src="https://www.youtube.com/embed/W_uOwoGcBuE"
-								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/W_uOwoGcBuE?autoplay=1><img src=https://img.youtube.com/vi/W_uOwoGcBuE/sddefault.jpg alt='Vidéo duo jazz manouche - Accordéon / Guitare - La Foule'><span>▶</span></a>"
+								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/W_uOwoGcBuE?autoplay=1>				<picture><source type='image/webp' srcset='https://img.youtube.com/vi_webp/W_uOwoGcBuE/sddefault.webp'><source type='image/jpeg' srcset='https://img.youtube.com/vi/W_uOwoGcBuE/sddefault.jpg'><img src='https://img.youtube.com/vi/W_uOwoGcBuE/sddefault.jpg' alt='Vidéo duo accordéon / guitare - La Foule'></picture>
+<span>▶</span></a>"
 								frameborder="0"
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen
@@ -38,7 +39,7 @@
 							<iframe
 								class="embed-responsive-item"
 								src="https://www.youtube.com/embed/oSiWQ_thsn8"
-								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/oSiWQ_thsn8?autoplay=1><img src=https://img.youtube.com/vi/oSiWQ_thsn8/sddefault.jpg alt='Vidéo accordéon solo - Java manouche'><span>▶</span></a>"
+								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/oSiWQ_thsn8?autoplay=1><picture><source type='image/webp' srcset='https://img.youtube.com/vi_webp/oSiWQ_thsn8/sddefault.webp'><source type='image/jpeg' srcset='https://img.youtube.com/vi/oSiWQ_thsn8/sddefault.jpg'><img src='https://img.youtube.com/vi/oSiWQ_thsn8/sddefault.jpg' alt='Vidéo accordéon solo - Java manouche'></picture><span>▶</span></a>"
 								frameborder="0"
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen
@@ -192,7 +193,7 @@
 							<iframe
 								class="embed-responsive-item"
 								src="https://www.youtube.com/embed/mv3DgoYPCds"
-								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/mv3DgoYPCds?autoplay=1><img src=https://img.youtube.com/vi/mv3DgoYPCds/sddefault.jpg alt='Vidéo accordéon jazz - Aint Misbehavin'><span>▶</span></a>"
+								srcdoc="<style>*{padding:0;margin:0;overflow:hidden}html,body{height:100%}img,span{position:absolute;width:100%;top:0;bottom:0;margin:auto}span{height:1.5em;text-align:center;font:48px/1.5 sans-serif;color:white;text-shadow:0 0 0.5em black}</style><a href=https://www.youtube.com/embed/mv3DgoYPCds?autoplay=1><picture><source type='image/webp' srcset='https://img.youtube.com/vi_webp/mv3DgoYPCds/sddefault.webp'><source type='image/jpeg' srcset='https://img.youtube.com/vi/mv3DgoYPCds/sddefault.jpg'><img src='https://img.youtube.com/vi/mv3DgoYPCds/sddefault.jpg' alt='Vidéo accordéon jazz - Aint Misbehavin'></picture><span>▶</span></a>"
 								frameborder="0"
 								allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 								allowfullscreen
