--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,7 +19,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-4 order-md-1">
+					<div class="col-md-4 order-md-1 d-none d-md-block">
 						<div class="embed-responsive embed-responsive-16by9 home-video">
 							<iframe
 								class="embed-responsive-item"
@@ -34,7 +34,7 @@
 						</div>
 					</div>
 
-					<div class="col-md-4 order-md-3">
+					<div class="col-md-4 order-md-3 d-none d-md-block">
 						<div class="embed-responsive embed-responsive-16by9 home-video">
 							<iframe
 								class="embed-responsive-item"
