--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -36,16 +36,24 @@
         <meta property="og:description" content="Jérémy Dutheil est accordéoniste professionnel à Paris, Ile de France">
         <meta property="og:image" content="http://www.jeremy-dutheil.fr/img/videos-pic.jpg">
 
+        <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+
         <link href="https://fonts.googleapis.com/css?family=Hind" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css?family=Oswald" rel="stylesheet">
 
         <!--<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">-->
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
-        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">-->
-        <link rel="stylesheet" href="{{ asset('css/main.css') }}">
+        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.1/css/all.min.css">-->
 
-        {% block stylesheets %}{% endblock %}
+        <!--<script src="https://kit.fontawesome.com/bbffdb2fa6.js" crossorigin="anonymous"></script>-->
+
+        <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">-->
+        <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css" integrity="sha384-Zug+QiDoJOrZ5t4lssLdxGhVrurbmBWopoEl+M6BdEfwnCJZtKxi1KgxUyJq13dy" crossorigin="anonymous">-->
+
+        {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
+
+            <!--<link rel="stylesheet" href="{{ asset('css/main.css') }}">-->
+        {% endblock %}
 
         <meta name="google-site-verification" content="1PGa-HjhRJoyN5SLrUG5rKOh6chzypvwrtXmKVe7zBE" />
 
@@ -207,101 +215,20 @@
             </div>
         </section>
 
+        <!--
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js" async></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.15.0/popper.min.js" async></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js" async></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js" async></script>
-
-        <!-- Start of HubSpot Embed Code -->
-        <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5519214.js"></script>
-        <!-- End of HubSpot Embed Code -->
-
-
-        {% block javascripts %}{% endblock %}
-
-        <!--<script>
-        // set the cookie for 1 hour
-            function setCookie(cname, cvalue, exhours) {
-                var d = new Date();
-                // add cookie expiry date to be one hour from the current time
-                d.setTime(d.getTime() + (exhours * 60 * 60 * 1000));
-                var expires = "expires=" + d.toGMTString();
-                // Pass the name, cookie value and expiry time into the cookie
-                document.cookie = cname + "=" + cvalue + "; " + expires;
-            }
-
-            function getCookie(cname) {
-                var name = cname + "=";
-                var ca = document.cookie.split(';');
-                for (var i = 0; i < ca.length; i++) {
-                    var c = ca[i];
-                    while (c.charAt(0) == ' ') {
-                        c = c.substring(1);
-                    }
-                    if (c.indexOf(name) == 0) {
-                        return c.substring(name.length, c.length);
-                    }
-                }
-                return "";
-            }
-
-            function checkCookie() {
-                var popUp = getCookie("poppedUp");
-                // if the cookie isn't empty, then don't show the modal, otherwise show the modal
-                if (popUp != "") {} else {
-                    // show modal
-                    $('.exit-popup-container').show();
-                    // Send event to Google Analytics
-                    ga('send', 'event', 'exitModal', 'Modal Displayed', 'exitModal');
-                    // change the value of the cookie so that we know the visitor has seent the cookie
-                    var popUp = 1;
-                    setCookie("poppedUp", popUp, 24);
-                }
-            }
-
-            $(document).ready(function() {
-                /*$('html').mouseleave(function() {
-                    checkCookie();
-                });
-
-                $('.exit-popup-close').click(function() {
-                    $('.exit-popup-container').hide();
-                });*/
-            });
-
-            $('.exit-popup form').submit(function(e) {
-                e.preventDefault();
-
-                $form = $(e.target);
-
-                $form.ajaxSubmit({
-                    type: 'post',
-                    success: function(data) {
-                        $('.exit-popup .form-content').hide();
-                        $('.exit-popup .valid-msg').show();
-                    },
-                    error: function(jqXHR, status, error) {
-                        console.log('error');
-                    }
-                });
-
-            });
-        </script>
         -->
 
 
-        <!--
-        <link href="https://fr.snatchbot.me/sdk/webchat.css" rel="stylesheet" type="text/css">
-        <script src="https://fr.snatchbot.me/sdk/webchat.min.js"></script>
-        <script>
-            function isMobileDevice() {
-                return (typeof window.orientation !== "undefined") || (navigator.userAgent.indexOf('IEMobile') !== -1);
-            };
+        {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
 
-            if (!isMobileDevice()) {
-                Init('?botID=53894&appID=webchat', 400, 400, 'https://dvgpba5hywmpo.cloudfront.net/media/image/eaT8UAKBfRXxpJ8oNUO2OX4b2', 'bubble', '#00AFF0', 90, 90, 62.99999999999999, '', '1', '#FFFFFF', '#FFFFFF', 1); /* for authentication of its users, you can define your userID (add &userID={login}) */
-            }
-        </script>
-        -->
+            <!-- Start of HubSpot Embed Code -->
+            <script type="text/javascript" id="hs-script-loader" async defer src="//js.hs-scripts.com/5519214.js"></script>
+            <!-- End of HubSpot Embed Code -->
+        {% endblock %}
     </body>
 </html>
