--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -564,3 +564,5 @@ a:hover { color: #ff841c; text-decoration: none; }
 @media screen and (max-width: 1320px) {
 	.nav-item--social { display: none; }
 }
+
+#contact .form-group:first-child { display: none; }
